--- a/1.md
+++ b/1.md
@@ -22,3 +22,7 @@
 * **DCFLs** *are* closed under **intersection with regular**, **complement**, and some other operations.
 * **Recursive (Decidable)** languages are closed under all Boolean and language operations.
 * **RE** languages are **not closed** under complement or difference, but are under most others.
+
+---
+
+**DPDA with final state is more powerful than DPDA with empty stack but CFL with final/empty/both all has the same power**
