--- a/1.md
+++ b/1.md
@@ -26,3 +26,5 @@
 ---
 
 **DPDA with final state is more powerful than DPDA with empty stack but CFL with final/empty/both all has the same power**
+
+As in DPDA we don't have the power to guess so, keeping stack empty and getting the correct result is harder.
